# Multiplayer-Tanks-2019

./: .gitignore  CMakeLists.txt  Readme.md  Repository.url  Wiki.url
Deploy/: snapshot.save
Source/: Application.cpp  Application.hpp  AssetManager.cpp  AssetManager.h  GameState.cpp  GameState.hpp  GlobalDefines.hpp  Globals.cpp  Globals.hpp  Main.cpp  Precompiled.hpp  Window.cpp  Window.h
Source/Common/: Debug.cpp  Debug.hpp  HandleMap.hpp  Math.hpp  StateMachine.hpp  Utility.cpp  Utility.hpp
Source/Game/: GameInstance.cpp  GameInstance.hpp  GameStateBase.cpp  GameStateBase.hpp  GameStateEntry.cpp  GameStateEntry.hpp  GameStateSession.cpp  GameStateSession.hpp  Level.cpp  Level.hpp  Object.cpp  Object.hpp  PlayerController.cpp  PlayerController.hpp  Projectile.cpp  Projectile.hpp  SnapshotSaveLoad.cpp  SnapshotSaveLoad.hpp  Tank.cpp  Tank.hpp  Transform.cpp  Transform.hpp  World.cpp  World.hpp  WorldState.cpp  WorldState.hpp
Source/Game/GameStates/: GameStateBase.cpp  GameStateBase.hpp  GameStateEntry.cpp  GameStateLoading.cpp  GameStateLoading.hpp  GameStateMainMenu.cpp  GameStateMainMenu.hpp  GameStateSession.cpp  GameStateSession.hpp
Source/Game/Objects/: Projectile.cpp  Projectile.hpp  Tank.cpp  Tank.hpp
Source/Game/Player/: Player.cpp  Player.hpp  PlayerCommand.hpp  PlayerControllerBase.cpp  PlayerControllerBase.hpp  PlayerControllerClient.cpp  PlayerControllerClient.hpp  PlayerControllerComputer.cpp  PlayerControllerComputer.hpp  PlayerControllerHuman.cpp  PlayerControllerHuman.hpp  PlayerControllerLocal.cpp  PlayerControllerLocal.hpp  PlayerControllerRemote.cpp  PlayerControllerRemote.hpp  PlayerManager.cpp  PlayerManager.hpp
Source/Game/World/: Handle.hpp  Object.cpp  Object.hpp  Transform.cpp  World.cpp  World.hpp
Source/Launcher/: CMakeLists.txt  Launcher.cpp
Source/Network/: Client.cpp  Client.hpp  Network.cpp  Network.hpp  PacketBase.cpp  PacketBase.hpp  PacketContainer.cpp  PacketContainer.hpp  PacketHeader.cpp  PacketHeader.hpp  PacketMessage.cpp  Protocol.cpp  Protocol.hpp  Server.cpp  Server.hpp
Source/Network/Connection/: ConnectionBackend.cpp  ConnectionBackend.hpp  ConnectionContext.cpp  ConnectionContext.hpp  ConnectionSettings.hpp  ConnectionSocket.cpp  ConnectionSocket.hpp
Source/Network/Interface/: NetworkBase.cpp  NetworkBase.hpp  NetworkClient.cpp  NetworkClient.hpp  NetworkInterface.hpp  NetworkServer.cpp  NetworkServer.hpp
Source/Network/Interfaces/: NetworkBase.cpp  NetworkBase.hpp  NetworkClient.cpp  NetworkClient.hpp  NetworkInterface.hpp  NetworkOffline.cpp  NetworkOffline.hpp  NetworkServer.cpp  NetworkServer.hpp
Source/Network/Packets/: PacketAcceptConnection.cpp  PacketAcceptConnection.hpp  PacketBase.cpp  PacketBase.hpp  PacketClientInput.cpp  PacketClientInput.hpp  PacketConnect.cpp  PacketConnect.hpp  PacketHeader.cpp  PacketHeader.hpp  PacketMessage.cpp  PacketMessage.hpp  PacketRequestConnection.cpp  PacketRequestConnection.hpp  PacketServerSnapshot.cpp  PacketServerSnapshot.hpp  PacketServerUpdate.cpp  PacketServerUpdate.hpp  PacketStateSave.cpp  PacketStateSave.hpp  PacketStateSnapshot.cpp  PacketStateSnapshot.hpp  PacketStateUpdate.cpp  PacketStateUpdate.hpp  Protocol.cpp  Protocol.hpp
Source/Network/Replication/: Replicable.cpp  Replicable.hpp  Replication.cpp  Replication.hpp  ReplicationBase.cpp  ReplicationBase.hpp  ReplicationClient.cpp  ReplicationClient.hpp  ReplicationCommand.cpp  ReplicationCommand.hpp  ReplicationServer.cpp  ReplicationServer.hpp  ReplicationTypes.cpp  ReplicationTypes.hpp
Source/Serialization/: MemoryBuffer.cpp  MemoryBuffer.hpp  MemoryStream.cpp  MemoryStream.hpp  Serializable.hpp  Serialization.cpp  Serialization.hpp
Source/System/: AssetManager.cpp  AssetManager.h  CommandLine.cpp  CommandLine.hpp  Console.cpp  Console.hpp  Globals.cpp  Globals.hpp  Logger.cpp  Logger.hpp  Main.cpp  Window.cpp  Window.h  Window.hpp
Source/Types/: RuntimeTypes.cpp  RuntimeTypes.hpp  TypeInfo.cpp  TypeInfo.hpp  TypeList.cpp
